--- a/Proiect/Proiect.csproj
+++ b/Proiect/Proiect.csproj
@@ -24,8 +24,11 @@
 		<EmbeddedResource Update="ListPage.xaml">
 			<Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 		</EmbeddedResource>
-		<EmbeddedResource Update="ProductPage.xaml">
+		<EmbeddedResource Update="Magazine.xaml">
 		  <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+		</EmbeddedResource>
+		<EmbeddedResource Update="ProductPage.xaml">
+			<Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 		</EmbeddedResource>
 	</ItemGroup>
 </Project>
